--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 OSS
-* **openpyxl**: Excelファイルの読み込み。 [MIT License](https://openpyxl.readthedocs.io/en/stable/licenses.html)
+* **openpyxl**: Excelファイルの読み込み。 [MIT License](https://github.com/fluidware/openpyxl/blob/master/LICENCE)
